brain/sources/prod-metadata/objects/Section__c/fields/Domain_Type__c.field-meta.xml
<CustomField>
    <fullName>Domain_Type__c</fullName>
    <description>Whether this section applies to technical roles, non-technical roles, or both. Used by Techsara&apos;s Magic mode to fetch sections matching the Niche Domain Type.</description>
    <inlineHelpText>Tech = technical roles only, Non-Tech = non-technical roles only, Both = applies to all.</inlineHelpText>
    <label>Domain Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tech</fullName>
            </value>
            <value>
                <fullName>Non-Tech</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
                <default>true</default>
                <label>Both</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>