brain/sources/prod-metadata/objects/Section__c/fields/ESTIMATED_TIME_IN_MINUTES__c.field-meta.xml
<CustomField>
    <fullName>ESTIMATED_TIME_IN_MINUTES__c</fullName>
    <label>Estimated Time(In Minutes)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>