brain/sources/prod-metadata/objects/Section__c/fields/Exclude_Source_Section__c.field-meta.xml
<CustomField>
    <fullName>Exclude_Source_Section__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Review section: all source sections except this one (e.g. except Coding).</description>
    <label>Exclude Source Section</label>
    <referenceTo>Section__c</referenceTo>
    <relationshipLabel>Review Except Sections</relationshipLabel>
    <relationshipName>Review_Except_Sections</relationshipName>
    <type>Lookup</type>
</CustomField>