brain/sources/prod-metadata/objects/Section__c/fields/Interview_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Interview_Sequence__c</fullName>
    <description>Used in Template Creation Flow only</description>
    <label>Interview Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>