brain/sources/prod-metadata/objects/Section__c/fields/Niche__c.field-meta.xml
<CustomField>
    <fullName>Niche__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>DEPRECATED 2026-05-17. Replaced by Section__c.Domain_Type__c. No longer used by any flow. Do not use.</description>
    <inlineHelpText>DEPRECATED - do not use. Use Domain Type instead.</inlineHelpText>
    <label>Niche (DEPRECATED - do not use)</label>
    <referenceTo>Niche__c</referenceTo>
    <relationshipLabel>Sections</relationshipLabel>
    <relationshipName>Sections</relationshipName>
    <type>Lookup</type>
</CustomField>