brain/sources/prod-metadata/objects/Section__c/fields/Question_Source_Type__c.field-meta.xml
<CustomField>
    <fullName>Question_Source_Type__c</fullName>
    <label>Question Source Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>AI Resume Based</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>