brain/sources/prod-metadata/objects/Section__c/fields/Source_Interview_Type__c.field-meta.xml
<CustomField>
    <fullName>Source_Interview_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>REVIEW SECTION: pull questions as if the interview type were this mock (e.g. Final Mock Week 1 pulls Mock 1 pools).</description>
    <label>Source Interview Type</label>
    <referenceTo>Interview_Type__c</referenceTo>
    <relationshipLabel>Review Sections</relationshipLabel>
    <relationshipName>Review_Sections</relationshipName>
    <type>Lookup</type>
</CustomField>