brain/sources/prod-metadata/objects/Section__c/fields/Source_Section__c.field-meta.xml
<CustomField>
    <fullName>Source_Section__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Review section: only this source section&apos;s questions.</description>
    <label>Source Section (only)</label>
    <referenceTo>Section__c</referenceTo>
    <relationshipLabel>Review Only Sections</relationshipLabel>
    <relationshipName>Review_Only_Sections</relationshipName>
    <type>Lookup</type>
</CustomField>